[package]
name = "discord-bot"
version = "0.1.0"
authors = ["Collins Muriuki <murerwacollins@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
serenity = { version = "0.9.0-rc.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework"] }
rand = "0.7.3"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0"